[package]
name = "servo-fontconfig"
version = "0.2.0"
authors = ["The Servo Project Developers"]
repository = "https://github.com/servo/rust-fontconfig/"
description = "Rust bindings for fontconfig"
license=  "MIT / Apache-2.0"

[lib]
name = "fontconfig"

[dependencies]
libc = "0.2"

[dependencies.servo-fontconfig-sys]
git = "https://github.com/jwilm/libfontconfig"
rev = "618a52973d46e5cce4f054f6ee3bd2682167eee4"
